--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
 			#balloon td                { border:1px dotted #aaa; padding:6px; vertical-align:top; }
 			#scrollbar                 { overflow:scroll; width:1em; height:100px; }
 			#scrollbar-insizer         { height:1000px; }
-			#log                       { z-index:200; overflow:scroll; position:absolute; border:1px solid #000; top:60px; left:60px; right:60px; bottom:60px; background-color:#ddd; font-family:monospace; }
+			#log                       { z-index:200; overflow:scroll; position:absolute; border:1px solid #000; top:100px; left:60px; right:60px; bottom:60px; background-color:#ddd; font-family:monospace; }
 			#log div                   { font-size:small; border-bottom:1px dotted #000; }
 			#toggleLog                 { border:1px solid #ddd; cursor:pointer; padding:6px; } 
 			#toggleLog:hover           { border-style:outset; }
@@ -170,6 +170,7 @@
 									<option name='Inherited'>Inherited</option>
 								</optgroup>
 								-->
+								<!-- XXX i think i came up with these myself? they do make some sense -->
 								<optgroup label='Special Characters'>
 									<option name='Punctuation' value=';P;'>Punctuation</option>
 									<option name='Modifier Symbols' value=';Sk;'>Modifier Symbols</option> 
